--- a/zusammenfassung.tex
+++ b/zusammenfassung.tex
@@ -1,6 +1,21 @@
 \begin{abstract}[ngerman]
-Eine deutsche Zusammenfassung.
+    In dieser Arbeit wird ein SYCL"=Backend für die Parallelisierungsbibliothek
+    \textit{Alpaka} entwickelt. Besondere Aufmerksamkeit kommt dabei FPGAs zu,
+    die mit ihren inhärenten Hardware"= und Parallelisierungseigenschaften
+    eine interessante Plattform für Alpaka"= und SYCL"=Programme sind. Das
+    entwickelte Backend wird anhand eines Alpaka"=basierten Photonenzählers aus
+    dem Umfeld der Laser"=Teilchenbeschleunigung evaluiert. Außerdem werden die
+    zur Zeit verfügbaren SYCL"=Implementierungen hinsichtlich ihres
+    Entwicklungsstandes und ihrer Kompatibilität mit dem Alpaka"=SYCL"=Backend
+    untersucht.
 \nextabstract[english]
-An English summary.
+    This thesis shows the development of a SYCL backend for the parallelization
+    library \textit{Alpaka}. Special attention is given to FPGAs which are an
+    interesting platform for both Alpaka and SYCL programs due to their inherent
+    hardware and parallelization properties. The SYCL backend is evaluated
+    against an Alpaka-based photon counter which is used in the field of laser
+    particle acceleration. In addition, the currently available SYCL
+    implementations are investigated with regard to their state of development
+    and their compatibility with Alpaka's SYCL backend.
 \end{abstract}
 
