--- a/main.tex
+++ b/main.tex
@@ -83,13 +83,6 @@
 \referee{Prof. Dr.-Ing. habil. Rainer G. Spallek \and
          Prof. Dr. rer. nat. Ulrich Schramm}
 
-\dedication{Für hilfreiche Antworten und Anregungen während der Implementierung
-            des Alpaka"=SYCL"=Backends bedanke ich mich herzlichst bei Herrn
-            René Widera. Großer Dank gebührt darüber hinaus Herrn Jonas Schenke,
-            der mir während der Arbeit mit dem \textit{jungfrau"=photoncounter}
-            noch in den tiefsten Abendstunden mit zahlreichen Ratschlägen zur
-            Seite stand.}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Vorspann
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -129,6 +122,16 @@
 
 \appendix
 \input{anhang}
+
+\chapter*{Danksagung}
+\addcontentsline{toc}{chapter}{Danksagung}
+Für hilfreiche Antworten und Anregungen während der Implementierung des
+Alpaka"=SYCL"=Backends bedanke ich mich herzlichst bei Herrn René Widera.
+Großer Dank gebührt darüber hinaus Herrn Jonas Schenke, der mir während der
+Arbeit mit dem \textit{jungfrau"=photoncounter} noch in den tiefsten
+Abendstunden mit zahlreichen Ratschlägen zur Seite stand.
+
+\newpage\null\thispagestyle{empty}\newpage
 
 \confirmation[language=ngerman]
 
