--- a/glossar.tex
+++ b/glossar.tex
@@ -31,7 +31,7 @@
 \newglossaryentry{alpaka}{name = Alpaka,
                           description = {C++-Abstraktionsbibliothek für die
                                          Beschleunigerprogrammierung}}
-\newglossaryentry{architecture}{name = \textit{Architecture},
+\newglossaryentry{architecture}{name = Architecture,
                                 description = {Verhaltensbeschreibung einer
                                                VHDL-Komponente}}
 \newglossaryentry{blas}{name = BLAS,
@@ -44,7 +44,7 @@
                           description = {Alpaka- und SYCL-Bezeichnung für einen
                                          Beschleuniger},
                           plural = Devices}
-\newglossaryentry{entity}{name = \textit{Entity},
+\newglossaryentry{entity}{name = Entity,
                           description = {Schnittstellenbeschreibung einer
                                          VHDL-Komponente}}
 \newglossaryentry{flipflop}{name = Flip-Flop,
